--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@ body {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+}
+
+.react-horizontal-scrolling-menu--inner-wrapper {
+  width: 100%;
 }
 
 .detail-image {
@@ -104,6 +109,12 @@ body {
   text-decoration: none;
 }
 
+.react-horizontal-scrolling-menu--scroll-container {
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+}
+
 @media screen and (max-width: 1200px) {
   .detail-image {
     width: 300px;
@@ -111,7 +122,7 @@ body {
   }
 
   .react-horizontal-scrolling-menu--scroll-container {
-    width: 500px;
+    width: 650px;
   }
 
   .left-arrow,
